# job-platform-dice

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/ai-service/: pyproject.toml
apps/ai-service/alembic/: env.py
apps/ai-service/alembic/versions/: 20260316_0001_init_ai.py
apps/ai-service/app/: main.py
apps/ai-service/app/api/: documents.py
apps/ai-service/app/core/: config.py  db.py
apps/ai-service/app/models/: __init__.py  document.py
apps/ai-service/app/repositories/: document_repository.py
apps/ai-service/app/services/: document_event_service.py  document_service.py  docx_builder.py  openai_client.py  prompt_templates.py
apps/ai-service/tests/: test_prompt_templates.py
apps/api-gateway/: pyproject.toml
apps/api-gateway/app/: main.py
apps/api-gateway/app/api/: applications.py  document_download.py  documents.py  job_actions.py  jobs.py  scrape_runs.py
apps/api-gateway/app/clients/: services.py
apps/api-gateway/app/core/: config.py
apps/apply-service/: docker-entrypoint.sh  pyproject.toml
apps/apply-service/alembic/: env.py
apps/apply-service/alembic/versions/: 20260316_0001_init_apply.py
apps/apply-service/app/: main.py
apps/apply-service/app/api/: applications.py
apps/apply-service/app/core/: config.py
apps/apply-service/app/models/: __init__.py  application.py
apps/apply-service/tests/: test_strategies.py
apps/job-service/: pyproject.toml
apps/job-service/alembic/: env.py
apps/job-service/app/: main.py
apps/job-service/tests/: test_job_repository.py
apps/notification-service/: pyproject.toml
apps/notification-service/app/: main.py
apps/notification-service/app/core/: config.py
apps/orchestrator-service/: alembic.ini  pyproject.toml
apps/orchestrator-service/alembic/: env.py
apps/orchestrator-service/alembic/versions/: 20260316_0001_init_scraper.py
apps/orchestrator-service/app/: main.py
apps/orchestrator-service/app/api/: health.py  scrape_runs.py  task_updates.py
apps/orchestrator-service/app/core/: config.py
apps/orchestrator-service/app/models/: __init__.py  scrape.py
apps/orchestrator-service/app/repositories/: scrape_repository.py
apps/orchestrator-service/app/schemas/: scrape.py
apps/orchestrator-service/app/services/: run_event_service.py  run_status_service.py  scrape_service.py
apps/scraper-service/: pyproject.toml
apps/scraper-service/app/: main.py
apps/scraper-service/app/api/: health.py  scrape.py
apps/scraper-service/app/core/: config.py
apps/scraper-service/app/domain/: normalization.py
apps/scraper-service/app/schemas/: scrape.py
apps/scraper-service/app/services/: board_base.py  registry.py
apps/scraper-service/app/services/adapters/: demo.py  dice.py  greenhouse.py
apps/scraper-service/tests/: test_dice_adapter.py  test_normalization.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-shell.tsx  jobs-list.tsx  stat-card.tsx
apps/web/lib/: api.ts
apps/worker-service/: pyproject.toml
apps/worker-service/app/: main.py  tasks.py
apps/worker-service/app/api/: health.py
apps/worker-service/app/core/: config.py  queue.py
apps/worker-service/app/services/: scrape_flow.py
docs/architecture/: phase-1.md
docs/runbooks/: local-dev.md
infra/compose/: docker-compose.yml
infra/docker/: python-service.Dockerfile  web.Dockerfile
tests/integration/: test_documents_and_apply_types.py  test_shared_types.py
(+34 files in other folders)
