[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "job-bot-monorepo"
version = "0.1.0"
description = "Production-grade Job Bot microservice platform"
requires-python = ">=3.12"
dependencies = [
  "ruff>=0.11.0",
  "black>=25.1.0",
  "pytest>=8.3.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["apps", "packages", "tests"]

