[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "worker-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "celery>=5.4.0",
  "shared-config",
  "shared-events",
  "shared-queue",
  "shared-types",
  "shared-utils",
  "shared-http",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
